@@ -1,5 +1,11 @@
 2008-06-08  Jared Moore  <jaredm@svn.gnome.org>
 
+	* src/file-manager/fm-directory-view.c (directory_view_entries),
+	(real_update_location_menu), (real_update_menus):
+	Add mnemonics to "Open in New Window", "Open in New Tab", etc.
+
+2008-06-08  Jared Moore  <jaredm@svn.gnome.org>
+
 	* configure.in:
 	Fixed typo, thanks Christopher Bratusek.
 
